<resources>
    <string name="app_name">module_notification</string>
    <string name="module_notification_list_tip">消息</string>
    <string name="module_notification_all_read">全部已读</string>
    <string name="module_notification_fans">粉丝</string>
    <string name="module_notification_like">赞</string>
    <string name="module_notification_reply">回答</string>
    <string name="module_notification_comment">评论</string>
    <string name="module_notification_comment_details">评论详情</string>
    <string name="module_notification_system_detail">详情</string>
    <string name="module_notification_system_notification_title">系统通知</string>
    <string name="module_notification_like_me_title">赞我的</string>
    <string name="module_notification_quick_reply">回复</string>
    <string name="module_notification_reply_all_read">一键已读</string>
    <string name="module_notification_push_setting">消息设置</string>
    <string name="module_notification_reply_invitation">回答邀请</string>
    <string name="module_notification_circle_invitation">圈子邀请</string>
    <string name="module_notification_system_message">系统消息</string>
    <string name="module_notification_reply_question">回答了问题</string>
    <string name="module_notification_more_people">等%d人</string>
    <string name="module_notification_comment_you">评论了你</string>
    <string name="module_notification_like_you">赞了你</string>
    <string name="module_notification_follow_it">关注Ta</string>
    <string name="module_notification_followed">已关注</string>
    <string name="module_notification_invite_you_answer">邀请你回答</string>
    <string name="module_notification_refuse">拒绝</string>
    <string name="module_notification_join">加入</string>
    <string name="module_notification_allow">同意</string>
    <string name="module_notification_invite_you_manager">邀请你成为管理员</string>
    <string name="module_notification_invite_you_join">邀请你加入圈子</string>
    <string name="module_notification_refuse_manager">拒绝了你的管理员邀请</string>
    <string name="module_notification_cancel_manager">取消了你的管理权限</string>
    <string name="module_notification_allowed">已同意</string>
    <string name="module_notification_refused">已拒绝</string>
    <string name="module_notification_joined">已加入</string>
    <string name="module_notification_full">已满员</string>
    <string name="module_notification_new_reply">最新回答</string>
    <string name="module_notification_url_error">无效链接</string>
    <string name="module_notification_official">官方</string>
    <string name="module_notification_delete">删除</string>
    <string name="module_notification_has_no_more">没有更多了</string>
    <string name="module_notification_reply_count">%s 条回复</string>
</resources>
