<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/root_toolabar_2"
        layout="@layout/module_uilib_search_toolbar_style_2"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/root_toolabar_2">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll">

                <ImageView
                    android:id="@+id/iv_fans"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/module_notification_icon_fans"
                    app:layout_constraintEnd_toStartOf="@+id/iv_like"
                    app:layout_constraintStart_toEndOf="@+id/iv_comment"
                    app:layout_constraintTop_toTopOf="@+id/iv_reply"/>

                <com.huihu.uilib.customize.RedPointView
                    android:id="@+id/red_point_fans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginBottom="44dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/iv_fans"
                    app:layout_constraintStart_toStartOf="@id/iv_fans"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/tv_fans_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/module_notification_fans"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/iv_fans"
                    app:layout_constraintStart_toStartOf="@id/iv_fans"
                    app:layout_constraintTop_toBottomOf="@id/iv_fans"/>

                <ImageView
                    android:id="@+id/iv_like"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/module_notification_icon_like_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_reply"/>

                <com.huihu.uilib.customize.RedPointView
                    android:id="@+id/red_point_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginBottom="44dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/iv_like"
                    app:layout_constraintStart_toStartOf="@id/iv_like"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/module_notification_like"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/tv_fans_title"
                    app:layout_constraintEnd_toEndOf="@id/iv_like"
                    app:layout_constraintStart_toStartOf="@id/iv_like"/>

                <ImageView
                    android:id="@+id/iv_reply"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/module_notification_icon_answer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

                <com.huihu.uilib.customize.RedPointView
                    android:id="@+id/red_point_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginBottom="44dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/iv_reply"
                    app:layout_constraintStart_toStartOf="@id/iv_reply"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/module_notification_reply"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/tv_fans_title"
                    app:layout_constraintEnd_toEndOf="@id/iv_reply"
                    app:layout_constraintStart_toStartOf="@id/iv_reply"/>

                <ImageView
                    android:id="@+id/iv_comment"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/module_notification_icon_reply"
                    app:layout_constraintEnd_toStartOf="@+id/iv_fans"
                    app:layout_constraintStart_toEndOf="@id/iv_reply"
                    app:layout_constraintTop_toTopOf="@+id/iv_reply"/>

                <com.huihu.uilib.customize.RedPointView
                    android:id="@+id/red_point_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginBottom="44dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/iv_comment"
                    app:layout_constraintStart_toStartOf="@id/iv_comment"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/module_notification_comment"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/tv_fans_title"
                    app:layout_constraintEnd_toEndOf="@id/iv_comment"
                    app:layout_constraintStart_toStartOf="@id/iv_comment"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/module_notification_list_tip"
                    android:textColor="@color/text_black"
                    android:textSize="32sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="消息"/>

                <TextView
                    android:id="@+id/tv_all_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:drawableEnd="@drawable/module_notification_icon_unread"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/module_notification_all_read"
                    android:textColor="#666666"
                    app:layout_constraintBaseline_toBaselineOf="@id/tv_title"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/line_top"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="53dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/gray_three"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_fans"/>


            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/module_notification_item_system_notification"/>

    </android.support.design.widget.CoordinatorLayout>


</android.support.constraint.ConstraintLayout>